added get logged in user
