# controllers/authController.js
@@ -46,3 +46,14 @@ exports.login = async (req, res) => {
     res.status(500).json(error);
   }
 };
+
+//get current user
+exports.getCurrentUser = async (req, res) => {
+   // #swagger.tags = ['Auth']
+  try {
+    const user = await User.findById(req.user.id).select("-password");
+    res.json(user);
+  } catch (error) {
+    res.status(500).json(error);
+  }
+};
